--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,6 +18,10 @@ body {
     letter-spacing: 8px;
 }
 
+.subtitle-nospace {
+    font-size: 20px;
+}
+
 .warningBox {
     margin-top: 20px;
     padding: 15px 20px 15px 20px;
